crates/builder/src/parser/snapshots/expression_precedence.snap
---
source: crates/builder/src/parser/converter.rs
expression: "convert_root(parsed.root_node(),\nr#\"\n            @postgres\n            module TestModule{\n                type Foo {\n                    @column(\"custom_column\") @access(!self.role == \"role_admin\" || self.role == \"role_superuser\")\n                    bar: Baz\n                }\n            }\n        \"#.as_bytes(),\nfile_span, Path :: new(\"input.exo\")).unwrap()"
---
types: []
modules:
  - name: TestModule
    annotations:
      - name: postgres
        params: None
    types:
      - name: Foo
        kind: Type
        fields:
          - name: bar
            typ:
              Plain:
                - ~
                - Baz
                - []
                - ~
            annotations:
              - name: column
                params:
                  Single:
                    - Literal:
                        String:
                          - custom_column
              - name: access
                params:
                  Single:
                    - AccessExpr:
                        LogicalOp:
                          Or:
                            - RelationalOp:
                                Eq:
                                  - LogicalOp:
                                      Not:
                                        - FieldSelection:
                                            Select:
                                              - Single:
                                                  - Identifier:
                                                      - self
                                                      - ~
                                                  - ~
                                              - Identifier:
                                                  - role
                                                  - ~
                                              - ~
                                        - ~
                                  - Literal:
                                      String:
                                        - role_admin
                                  - ~
                            - RelationalOp:
                                Eq:
                                  - FieldSelection:
                                      Select:
                                        - Single:
                                            - Identifier:
                                                - self
                                                - ~
                                            - ~
                                        - Identifier:
                                            - role
                                            - ~
                                        - ~
                                  - Literal:
                                      String:
                                        - role_superuser
                                  - ~
                            - ~
            default_value: ~
            doc_comments: ~
        fragment_references: []
        annotations: []
        doc_comments: ~
    enums: []
    methods: []
    interceptors: []
    base_exofile: input.exo
    doc_comments: ~
imports: []
declaration_doc_comments: ~
