crates/builder/src/parser/snapshots/logical_op_precedence.snap
---
source: crates/builder/src/parser/converter.rs
expression: "convert_root(parsed.root_node(),\nr#\"\n            @postgres\n            module TestModule {\n                @access(a || b && c)\n                type Foo {\n                }\n            }\n        \"#.as_bytes(),\nfile_span, Path :: new(\"input.exo\")).unwrap()"
---
types: []
modules:
  - name: TestModule
    annotations:
      - name: postgres
        params: None
    types:
      - name: Foo
        kind: Type
        fields: []
        fragment_references: []
        annotations:
          - name: access
            params:
              Single:
                - AccessExpr:
                    LogicalOp:
                      Or:
                        - FieldSelection:
                            Single:
                              - Identifier:
                                  - a
                                  - ~
                              - ~
                        - LogicalOp:
                            And:
                              - FieldSelection:
                                  Single:
                                    - Identifier:
                                        - b
                                        - ~
                                    - ~
                              - FieldSelection:
                                  Single:
                                    - Identifier:
                                        - c
                                        - ~
                                    - ~
                              - ~
                        - ~
        doc_comments: ~
    enums: []
    methods: []
    interceptors: []
    base_exofile: input.exo
    doc_comments: ~
imports: []
declaration_doc_comments: ~
